--- a/camera_ready/references.bib
+++ b/camera_ready/references.bib
@@ -11,7 +11,7 @@
 
 @inproceedings{alur2015pattern,
   title={Pattern-based refinement of assume-guarantee specifications in reactive synthesis},
-  author={Alur, Rajeev and Moarref, Salar and Topcu, Ufuk},
+  author={Alur, R. and Moarref, S. and Topcu, U.},
   booktitle={TACAS},
   year={2015},
   organization={Springer}
@@ -32,16 +32,14 @@
 }
 
 @inproceedings{BanusicMPSZ19pgcd,
-	author    = {G. B. Banusic and
+	author    = {G.B. Banusic and
 	R. Majumdar and
 	M. Pirron and
-	A{-}K. Schmuck and
+	A.K. Schmuck and
 	D. Zufferey},
 	title     = {{PGCD:} robot programming and verification with geometry, concurrency,
 	and dynamics},
 	booktitle = {{ICCPS} 2019, Montreal, QC, Canada},
-	pages     = {57--66},
-	publisher = {{ACM}},
 	year      = {2019}
 }
 
@@ -79,19 +77,16 @@
 
 @book{choset2005principles,
   title={Principles of robot motion: theory, algorithms, and implementation},
-  author={H.M. Choset and S. Hutchinson and K.M. Lynch and G. Kantor and W. Burgard and L. E. Kavraki and S. Thrun},
+  author={H.M. Choset and S. Hutchinson and K.M. Lynch and G. Kantor and W. Burgard and L.E. Kavraki and S. Thrun},
   year={2005},
   publisher={MIT press}
 }
 
 @INPROCEEDINGS{desai2017drona,
-	author={A. {Desai} and I. {Saha} and J. {Yang} and S. {Qadeer} and S. A. {Seshia}},
+	author={A. {Desai} and I. {Saha} and J. {Yang} and S. {Qadeer} and S.A. {Seshia}},
 	booktitle={ICCPS}, 
-	title={DRONA: A Framework for Safe Distributed Mobile Robotics}, 
-	year={2017},
-	volume={},
-	number={},
-	pages={239-248}}
+	title={{DRONA}: A Framework for Safe Distributed Mobile Robotics}, 
+	year={2017}}
 
 @inproceedings{fan2020fast,
   title={Fast and Guaranteed Safe Controller Synthesis for Nonlinear Vehicle Models},
@@ -111,7 +106,7 @@
 
 @inproceedings{fisac2015reach,
   title={Reach-avoid problems with time-varying dynamics, targets and constraints},
-  author={J. F. Fisac and M. Chen and C.J. Tomlin and S.S. Sastry},
+  author={J.F. Fisac and M. Chen and C.J. Tomlin and S.S. Sastry},
   booktitle={HSCC},
   pages={11--20},
   year={2015}
@@ -125,15 +120,14 @@
 }
 
 @inproceedings{herbert2017fastrack,
-  title={FaSTrack: A modular framework for fast and guaranteed safe motion planning},
-  author={S. L. Herbert and M. Chen and S. Han and S. Bansal and J. F. Fisac and C.J. Tomlin},
+  title={{F}a{ST}rack: A modular framework for fast and guaranteed safe motion planning},
+  author={S.L. Herbert and M. Chen and S. Han and S. Bansal and J.F. Fisac and C.J. Tomlin},
   booktitle={CDC},
-  pages={1517--1522},
   year={2017}
 }
 
 @inproceedings{howell2019altro,
-  title={ALTRO: A fast solver for constrained trajectory optimization},
+  title={{ALTRO}: A fast solver for constrained trajectory optimization},
   author={T.A. Howell and B.E. Jackson and Z. Manchester},
   booktitle={IROS},
   year={2019}
@@ -141,7 +135,7 @@
 
 
 @article{jackson2020scalable,
-	title={Scalable Cooperative Transport of Cable-Suspended Loads With UAVs Using Distributed Trajectory Optimization},
+	title={Scalable Cooperative Transport of Cable-Suspended Loads With {UAV}s Using Distributed Trajectory Optimization},
 	author={B.E. Jackson and T.A. Howell and K. Shah and M. Schwager and Z. Manchester},
 	journal={IEEE Robot. Autom. Lett.},
 	volume={5},
@@ -166,7 +160,7 @@
 @inproceedings{KhaledZ19pfaces,
 	author    = {M. Khaled and
 	M. Zamani},
-	title     = {pFaces: an acceleration ecosystem for symbolic control},
+	title     = {p{F}aces: an acceleration ecosystem for symbolic control},
 	booktitle = {HSCC},
 	pages     = {252--257},
 	year      = {2019}
@@ -175,7 +169,7 @@
 @book{LaValle2006,
 	year = {2006},
 	publisher = {Cambridge University Press},
-	author = {S. M. LaValle},
+	author = {S.M. LaValle},
 	title = {Planning Algorithms}
 }
 @article{LaValle1998planning,
@@ -190,7 +184,7 @@
 
 @inproceedings{majumdarassume,
   title={Assume-Guarantee Distributed Synthesis},
-  author={Majumdar, R. and Mallik, K. and Schmuck, A. K and Zufferey, D.},
+  author={Majumdar, R. and Mallik, K. and Schmuck, A.K. and Zufferey, D.},
   booktitle={EMSOFT},
   year={2020}
 }
@@ -198,7 +192,7 @@
 
 @misc{meyer2019,
 	title={Continuous and discrete abstractions for planning, applied to ship docking}, 
-	author={P.-J Meyer and H. Yin and A. H. Brodtkorb and M. Arcak and A. J. Sørensen},
+	author={P.-J Meyer and H. Yin and A.H. Brodtkorb and M. Arcak and A.J. Sørensen},
 	year={2019},
 	eprint={1911.09773},
 	archivePrefix={arXiv}
@@ -222,7 +216,7 @@
 }
 
 @INPROCEEDINGS{Nilsson:2018,
-	author={P. {Nilsson} and A. D. {Ames}},
+	author={P. {Nilsson} and A.D. {Ames}},
 	booktitle={CDC}, 
 	title={Barrier Functions: Bridging the Gap between Planning from Specifications and Safety-Critical Control}, 
 	year={2018}}
@@ -235,7 +229,7 @@
 	number = {5s},
 	pages = {1--19},
 	author = {I. Gavran and R. Majumdar and I. Saha},
-	title = {Antlab},
+	title = {Antlab: A Multi-Robot Task Server},
 	journal = {{ACM} TECS}
 }
 
@@ -255,15 +249,15 @@
 	volume = {29},
 	number = {10},
 	pages = {2799--2818},
-	author = {Alexandros Nikou and Dimos V. Dimarogonas},
+	author = {A. Nikou and D. V. Dimarogonas},
 	title = {Decentralized tube-based model predictive control of uncertain nonlinear multiagent systems},
-	journal = {International Journal of Robust and Nonlinear Control}
+	journal = {Int. J. Robust Nonlinear Control}
 }
 
 @INPROCEEDINGS{Pant2018multiquad,
-	author={Y. V. {Pant} and H. {Abbas} and R. A. {Quaye} and R. {Mangharam}},
+	author={Y.V. {Pant} and H. {Abbas} and R.A. {Quaye} and R. {Mangharam}},
 	booktitle={ICCPS}, 
-	title={Fly-by-Logic: Control of Multi-Drone Fleets with Temporal Logic Objectives}, 
+	title={Fly-by-{L}ogic: Control of Multi-Drone Fleets with Temporal Logic Objectives}, 
 	year={2018}}
 
 
@@ -285,36 +279,32 @@
 	M. Zamani},
 	title     = {{SCOTS:} {A} Tool for the Synthesis of Symbolic Controllers},
 	booktitle = {{HSCC}},
-	pages     = {99--104},
 	year      = {2016}
 }
 
 @article{Rodionova2020LearningtoFlyLC,
-	title={Learning-to-Fly: Learning-based Collision Avoidance for Scalable Urban Air Mobility},
+	title={Learning-to-{F}ly: Learning-based Collision Avoidance for Scalable Urban Air Mobility},
 	author={A. Rodionova and Y. Pant and K. Jang and H. Abbas and Rahul Mangharam},
 	journal={ArXiv},
 	year={2020}}
 
 @book{russel2010AIplanning,
-	author    = {Stuart J. Russell and
-	Peter Norvig},
-	title     = {Artificial Intelligence - {A} Modern Approach, Third International
-	Edition},
+	author    = {S.J. Russell and
+	P. Norvig},
+	title     = {Artificial Intelligence - {A} Modern Approach},
 	publisher = {Pearson Education},
 	year      = {2010}
 }
 
 @inproceedings{saha2016implan,
 	year = {2016},
-	month = apr,
-	publisher = {{IEEE}},
-	author = {I. Saha and R. Rattanachai and V. Kumar and G. J. Pappas and S. A. Seshia},
+	author = {I. Saha and R. Rattanachai and V. Kumar and G. J. Pappas and S.A. Seshia},
 	title = {Implan: Scalable Incremental Motion Planning for Multi-Robot Systems},
 	booktitle = {ICCPS}
 }
 
 @INPROCEEDINGS{Shahin2017cltl,
-	author={Y. E. {Sahin} and P. {Nilsson} and N. {Ozay}},
+	author={Y.E. {Sahin} and P. {Nilsson} and N. {Ozay}},
 	booktitle={ICCPS}, 
 	title={Provably-Correct Coordination of Large Collections of Agents with Counting Temporal Logic Constraints}, 
 	year={2017}}
@@ -340,7 +330,7 @@
 }
 
 @inproceedings{singh2018robust,
-  title={Robust tracking with model mismatch for fast and safe planning: an SOS optimization approach},
+  title={Robust tracking with model mismatch for fast and safe planning: an {SOS} optimization approach},
   author={S. Singh and M. Chen and S.L. Herbert and C.J. Tomlin and M. Pavone},
   booktitle={WAFR},
   pages={545--564},
@@ -349,13 +339,13 @@
 
 @article{tedrake2010lqr,
   title={LQR-trees: Feedback motion planning via sums-of-squares verification},
-  author={R. Tedrake and I. R. Manchester and M. Tobenkin and J.W. Roberts},
+  author={R. Tedrake and I.R. Manchester and M. Tobenkin and J. W. Roberts},
   journal={Int. J. Robot. Res},
   year={2010}
 }
 
 @article{tedrake2009lqr,
-  title={LQR-Trees: Feedback motion planning on sparse randomized trees},
+  title={{LQR}-Trees: Feedback motion planning on sparse randomized trees},
   author={R. Tedrake},
   year={2009},
   publisher={MIT Press}
@@ -381,7 +371,7 @@
 
 @article{wongpiromsarn2012receding,
   title={Receding horizon temporal logic planning},
-  author={T. Wongpiromsarn and U. Topcu and R. M. Murray},
+  author={T. Wongpiromsarn and U. Topcu and R.M. Murray},
   journal={IEEE TAC},
   volume={57},
   number={11},
@@ -398,9 +388,7 @@
 }
 
 @inproceedings{xiao2020merging,
-	month = jul,
-	publisher = {{IEEE}},
-	author = {W.Xiao and C.G. Cassandras},
+	author = {W. Xiao and C.G. Cassandras},
 	title = {Decentralized Optimal Merging Control for Connected and Automated Vehicles with Optimal Dynamic Resequencing},
 	booktitle = {{ACC}},
 	year={2020}
@@ -417,7 +405,7 @@
 @INPROCEEDINGS{sun2019,
 	author={X. {Sun} and R. {Nambiar} and M. {Melhorn} and Y. {Shoukry} and P. {Nuzzo}},
 	booktitle={ICRA}, 
-	title={DoS-Resilient Multi-Robot Temporal Logic Motion Planning}, 
+	title={Do{S}-Resilient Multi-Robot Temporal Logic Motion Planning}, 
 	year={2019},
 	volume={},
 	number={},
