--- a/camera_ready/conclusion.tex
+++ b/camera_ready/conclusion.tex
@@ -21,7 +21,8 @@ On the other hand, the smaller the value of $\varepsilon$, the more difficult it
 Also, there is a trade-off between computation time and ease of synthesis when it comes to choosing the parameters $\eta_x$ and $\eta_u$ for SCOTS: Larger values of these parameters will result in faster computation but harder synthesis problem.
 Thus there needs to be a good balance when we choose the parameters for our tool.
 Indeed, it is not always easy to come up with a good set of parameters.
-Our current approach adds an outer loop around our tool to search for suitable parameters until the decentralized synthesis is successful (see Fig.~\ref{fig:overall}).
+Our current approach adds an outer loop around our tool to search for suitable parameters until the decentralized synthesis is successful.
+% (see Fig.~\ref{fig:overall}).
 In the future, we plan to investigate if the parameters can be systematically discovered by separately analyzing the dynamics of the systems.
 
 %\smallskip
