--- a/camera_ready/experiments.tex
+++ b/camera_ready/experiments.tex
@@ -17,7 +17,7 @@
 		\label{tab:runtimes}
 	}
 
-	\renewcommand{\arraystretch}{1.2}
+	\renewcommand{\arraystretch}{1.1}
 	%\setlength{\tabcolsep}{0.7em} % for the horizontal padding
 	%\resizebox{1\columnwidth}{!}{
 		\begin{tabular}{| l | S |S[table-format=+1.2e+1] S S|S[table-format=+1.2e+3] c c|}
@@ -73,19 +73,19 @@ As reflected in Table~\ref{tab:runtimes}, memory requirement for the global ABCD
 
 \begin{figure}[t]
 	\centering
-	\includegraphics[width=0.45\textwidth]{figures/final_box_plot.eps}
+	\includegraphics[width=\columnwidth]{figures/final_box_plot.eps}
 	\caption{Variations of run times of local ABCD among different agents for three case studies.}
 	\label{fig:box_plot}
-	\vspace{-.5cm}
+	\vspace{-.3cm}
 \end{figure}
 %\vspace{-cm}
 \begin{figure}[t]
     \large
      \centering
-         \includegraphics[width=.5\textwidth]{figures/tr10_final.eps}
+         \includegraphics[width=\columnwidth]{figures/tr10_final.eps}
         \caption{Time-state space illustration of tubes enclosing nominal trajectories for the multi-drone path planning}
         \label{fig:3dtubes}
-        \vspace{-.6cm}
+        \vspace{-.3cm}
 \end{figure}
 
 %\end{huge}
