--- a/camera_ready/related_work.tex
+++ b/camera_ready/related_work.tex
@@ -79,7 +79,7 @@ We highlight that our tool \tool is the only one that fulfills all the criteria.
 \begin{table}
 	\large
 	\centering
-	\caption{Features of the publicly available tools found in the literature. Note that some of these tools can handle richer class of specifications, compared to the reach-avoid problem that we consider in this paper.}\label{tab:tools}
+	\caption{Features of the publicly available tools compared to \tool. Note that some of these tools can handle richer classes of specifications, compared to the reach-avoid problem handled by \tool.}\label{tab:tools}
 	\renewcommand{\arraystretch}{1.2}
 	\setlength{\tabcolsep}{0.7em} % for the horizontal padding
 	%\resizebox{1\columnwidth}{!}{
