--- a/camera_ready/related_work.tex
+++ b/camera_ready/related_work.tex
@@ -1,6 +1,6 @@
 % !TEX root = main.tex
 
-\smallskip
+%\smallskip
 \noindent\textbf{Related Work}
 %
 The field of multi-agent planning is too large for a comprehensive survey; we point to the text books
@@ -77,7 +77,7 @@ In Table~\ref{tab:tools}, we summarize the main features of the publicly availab
 We highlight that our tool \tool is the only one that fulfills all the criteria.
 
 \begin{table}
-	\large
+	%\large
 	\centering
 	\caption{Features of the publicly available tools compared to \tool. Note that some of these tools can handle richer classes of specifications, compared to the reach-avoid problem handled by \tool.}\label{tab:tools}
 	\renewcommand{\arraystretch}{1.2}
@@ -90,7 +90,7 @@ We highlight that our tool \tool is the only one that fulfills all the criteria.
 							>{\centering\arraybackslash}m{5mm}}
 		\toprule
 		Tool name &
-		\rotatebox{90}{Non-linear Dynamics} & \rotatebox{90}{Formal Guarantee} & \rotatebox{90}{Multi-agent} & \rotatebox{90}{Decentralized controllers}\\
+		\rotatebox{90}{Non-linear Dynamics} & \rotatebox{90}{Formal Guarantee} & \rotatebox{90}{Multi-agent} & \rotatebox{90}{Decentralized Controllers}\\
 		\hline
 		\rowcolor{black!20} \tool  & \ding{51} &\ding{51} & \ding{51} &  \ding{51}\\
 		\hline
