--- a/camera_ready/intro.tex
+++ b/camera_ready/intro.tex
@@ -32,7 +32,7 @@ such as abstraction-based control design (ABCD) or Hamilton-Jacobi techniques,
 handle precise models of nonlinear dynamics and the effects of disturbance, but are difficult to scale beyond about $10$ dimensions.
 
 \begin{figure}[t]
-\includegraphics[scale=0.28]{figures/Algorithm_outline_updated.pdf}
+\includegraphics[width = 1.05\columnwidth, height = 0.6\columnwidth]{figures/Algorithm_outline_updated.pdf}
 %\vspace*{-0.5cm}
 \caption{Overall algorithm: The blue block on the left (centrally) computes joint open-loop nominal trajectory for the overall system, and the green block on the right computes decentralized controllers for tracking the nominal trajectory using Abstraction Based Controller Design (ABCD).
 $\Set{\Sigma^i}_{i\in [1;N]}$ is a set of $N$ agents, $\Phi$ is a global reach-avoid specification, $\varepsilon$ is a robustness margin, $\rho_1,\ldots,\rho_N$ are the local projections of the nominal trajectory, $\eta_x,\eta_u$ are parameters used in ABCD, and $C_1,\ldots,C_N$ are the sought local feedback controllers for the individual agents.
