--- a/theory.tex
+++ b/theory.tex
@@ -282,12 +282,12 @@ We demonstrate this phenomenon on a control system $\Sigma$ that is a simple $2$
 		\dot{x}_2 = -\sin(x_1) + u/5,
 	\end{align*}
 where $x_1$ represents the angle (in Radian) of the pendulum rod measured counter-clockwise from the vertical upright position, and $x_2$ represents the rate of change of $x_1$ or the angular velocity.
-Suppose the initial state of the pendulum is $(\pi,0)$, i.e., when the pendulum is in the vertical downward position and is stationary.
-Suppose we want to find a controller for the goal $\goal = \set{(0,0)}$, i.e., when the pendulum is in the vertical upward position and is stationary.
+Suppose the initial state of the pendulum is $(0,0)$, i.e., when the pendulum is in the vertical downward position and is stationary.
+Suppose we want to find a controller for the goal $\goal = \set{(\pi,0)}$, i.e., when the pendulum is in the vertical upward position and is stationary.
 The set of unsafe states $\avoid$ is empty, i.e., no safety constraint is imposed.
 When we use ALTRO to compute an open-loop controller $C$, unsurprisingly, the controlled trajectory of $C\triangleright \Sigma$ looks like a spiral, as shown in Fig.~\ref{fig:traj 2d pendulum}.
 The synthesis of tracking controller using ABCD is indeed successful when we feed this nominal trajectory to our ABCD solver.
-However, if we use a geometric planner for this example that ignores the dynamics, the nominal trajectory would be a straight line path from $(\pi,0)$ to $(0,0)$, which gives an infeasible tracking problem for ABCD, due to the restrictions on possible trajectories of the pendulum coming from the its dynamics.
+However, if we use a geometric planner for this example that ignores the dynamics, the nominal trajectory would be a straight line path from $(0,0)$ to $(\pi,0)$, which gives an infeasible tracking problem for ABCD, due to the restrictions on possible trajectories of the pendulum coming from the its dynamics.
 	\begin{figure}
 		\includegraphics[width=0.45\textwidth]{figures/inverted_pendulum_plot2.eps}
 		\caption{The nominal trajectory for the inverted pendulum.} %\Sadegh{Text inside the figure is very small, make it larger so that it is readable.}}
