--- a/camera_ready/theory.tex
+++ b/camera_ready/theory.tex
@@ -280,7 +280,7 @@ We demonstrate this phenomenon on a control system $\Sigma$ that is a simple $2$
 		\dot{x}_1 = x_2\quad
 		\dot{x}_2 = -\sin(x_1) + u/5,
 	\end{align*}
-where $x_1$ represents the angle (in Radian) of the pendulum rod measured counter-clockwise from the vertical upright position, and $x_2$ represents the rate of change of $x_1$ or the angular velocity.
+where $x_1$ represents the angle (in Radian) of the pendulum rod measured counter-clockwise from the vertical downward position, and $x_2$ represents the rate of change of $x_1$ or the angular velocity.
 Suppose the initial state of the pendulum is $(0,0)$, i.e., when the pendulum is in the vertical downward position and is stationary.
 Suppose we want to find a controller for the goal $\goal = \set{(\pi,0)}$, i.e., when the pendulum is in the vertical upward position and is stationary.
 The set of unsafe states $\avoid$ is empty, i.e., no safety constraint is imposed.
