multi drone planning figure modified

--- a/camera_ready/experiments.tex
+++ b/camera_ready/experiments.tex
@@ -82,7 +82,7 @@ As reflected in Table~\ref{tab:runtimes}, memory requirement for the global ABCD
 \begin{figure}[t]
     \large
      \centering
-         \includegraphics[width=\columnwidth]{figures/tr10_final.eps}
+         \includegraphics[width=\columnwidth]{figures/10t_final.eps}
         \caption{Time-state space illustration of tubes enclosing nominal trajectories for the multi-drone path planning}
         \label{fig:3dtubes}
         \vspace{-.3cm}
